# bottle_detection_benchmark

./: LICENSE  README.md  download  pyproject.toml  requirements.txt
configs/: faster_rcnn.yaml  ssd.yaml  yolov8.yaml
data/: README (1).md
notebooks/: 01_ssd_original_experiment.ipynb
scripts/: convert_coco_to_yolo.py  evaluate.py  train.py  train_yolov8.py
src/bottle_detector/: __init__.py
src/bottle_detector/datasets/: __init__ (1).py  coco_dataset.py  transforms.py
src/bottle_detector/engine/: __init__ (2).py  evaluate (1).py  train (1).py  visualize.py
src/bottle_detector/models/: __init__ (3).py  torchvision_models.py
src/bottle_detector/utils/: __init__ (4).py  metrics.py
