[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bottle-detector"
version = "0.1.0"
description = "Multi-model (SSD / Faster R-CNN / YOLOv8) bottle detection benchmark"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
